Fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -591,6 +591,39 @@
         margin: 3% 0% 0% 4%;
     }
 
+    /*#privacy-page {
+        flex-direction: column;
+        position: absolute;
+        width: 100%;
+        height: 95%;
+        padding-top: 5%;
+    }
+
+    #privacy-page .privacy-page-content {
+        width: 100%;
+        height: 97%;
+        padding: 5% 5% 5% 5%;
+        resize: none;
+        overflow: auto;
+    }
+
+    .privacy-page-content::-webkit-scrollbar {
+        
+    }
+
+    .privacy-page-content h1 {
+        text-align: center;
+        margin: 5% auto;
+    }
+
+    .privacy-page-content h3 {
+        margin: 3% 0% 0% 4%;
+    }
+
+    .privacy-page-content p {
+        margin: 3% 0% 0% 4%;
+    }*/
+
 /*
     .contactform-page .button {
         display: flex;
